--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details ?</a>
     </div>
     <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+      <p id="top-section-for-adding-element-to-list">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"
@@ -27,7 +27,7 @@
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="incomplete-tasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
@@ -38,11 +38,11 @@
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="editMode">
+        <li class="edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text"
-                 value="Go Shopping" 
+                 value="go-shopping" 
                  class="task">
           <button class="edit">Save</button>
           <button class="delete">
