--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
           charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="matrix">
       <img src="./eisenhower-matrix.jpg">
       <a class="more_inf"
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details ?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"
+    <div class="to-do-list">
+      <p id="add-task">
+        <label for="new-task_input">Add Item</label>
+        <div class="new-task-wrapper">
+          <input id="new-task_input"
                  class="task"
                  type="text">
           <button>Add</button>
@@ -33,8 +33,8 @@
           <label class="task">Pay Bills</label>
           <input type="text" 
                  class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <button class="edit_button">Edit</button>
+          <button class="delete_button">
             <img src="./remove.svg">
           </button>
         </li>
@@ -44,8 +44,8 @@
           <input type="text"
                  value="go-shopping" 
                  class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+          <button class="edit_button">Save</button>
+          <button class="delete_button">
             <img src="./remove.svg">
           </button>
         </li>
@@ -57,10 +57,10 @@
           <label class="task">See the Doctor</label>
           <input type="text" 
                  class="task">
-          <button class="edit">Edit</button>
-            <button class="delete">
-              <img src="./remove.svg">
-            </button>
+          <button class="edit_button">Edit</button>
+          <button class="delete_button">
+            <img src="./remove.svg">
+          </button>
         </li>
       </ul>
     </div>
