--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
           media="screen" 
           charset="utf-8">
   </head>
-  <body>
+  <body class="body-container">
     <div class="matrix">
-      <img src="./eisenhower-matrix.jpg">
+      <img class="matrix-img" src="./eisenhower-matrix.jpg">
       <a class="more_inf"
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details ?</a>
     </div>
@@ -21,45 +21,45 @@
         <label for="new-task_input">Add Item</label>
         <div class="new-task-wrapper">
           <input id="new-task_input"
-                 class="task"
+                 class="task_input"
                  type="text">
           <button>Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
+      <h3 class="title">Todo</h3>
+      <ul class="tasks-container" id="incomplete-tasks">
+        <li class="task-item">
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
+          <label class="task_input">Pay Bills</label>
           <input type="text" 
-                 class="task">
+                 class="task_input">
           <button class="edit_button">Edit</button>
           <button class="delete_button">
-            <img src="./remove.svg">
+            <img class="delete_button_img" src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
+        <li class="task-item edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
+          <label class="task_input">Go Shopping</label>
           <input type="text"
                  value="go-shopping" 
-                 class="task">
+                 class="task_input">
           <button class="edit_button">Save</button>
           <button class="delete_button">
-            <img src="./remove.svg">
+            <img class="delete_button_img" src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
+      <h3 class="title">Completed</h3>
+      <ul class="tasks-container" id="completed-tasks">
+        <li class="task-item">
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
+          <label class="task_input">See the Doctor</label>
           <input type="text" 
-                 class="task">
+                 class="task_input">
           <button class="edit_button">Edit</button>
           <button class="delete_button">
-            <img src="./remove.svg">
+            <img class="delete_button_img" src="./remove.svg">
           </button>
         </li>
       </ul>
