--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="body-container">
     <div class="matrix">
       <img class="matrix-img" src="./eisenhower-matrix.jpg">
-      <a class="more_inf"
+      <a class="matrix-info"
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details ?</a>
     </div>
     <div class="to-do-list">
@@ -21,7 +21,7 @@
         <label for="new-task_input">Add Item</label>
         <div class="new-task-wrapper">
           <input id="new-task_input"
-                 class="task_input"
+                 class="task task_input"
                  type="text">
           <button>Add</button>
         </div>
@@ -30,9 +30,9 @@
       <ul class="tasks-container" id="incomplete-tasks">
         <li class="task-item">
           <input type="checkbox">
-          <label class="task_input">Pay Bills</label>
+          <label class="task">Pay Bills</label>
           <input type="text" 
-                 class="task_input">
+                 class="task task_input">
           <button class="edit_button">Edit</button>
           <button class="delete_button">
             <img class="delete_button_img" src="./remove.svg">
@@ -40,10 +40,10 @@
         </li>
         <li class="task-item edit-mode">
           <input type="checkbox">
-          <label class="task_input">Go Shopping</label>
+          <label class="task">Go Shopping</label>
           <input type="text"
                  value="go-shopping" 
-                 class="task_input">
+                 class="task task_input">
           <button class="edit_button">Save</button>
           <button class="delete_button">
             <img class="delete_button_img" src="./remove.svg">
@@ -54,9 +54,9 @@
       <ul class="tasks-container" id="completed-tasks">
         <li class="task-item">
           <input type="checkbox" checked>
-          <label class="task_input">See the Doctor</label>
+          <label class="task">See the Doctor</label>
           <input type="text" 
-                 class="task_input">
+                 class="task task_input">
           <button class="edit_button">Edit</button>
           <button class="delete_button">
             <img class="delete_button_img" src="./remove.svg">
