--- a/index.html
+++ b/index.html
@@ -11,59 +11,67 @@
           charset="utf-8">
   </head>
   <body class="body-container">
-    <div class="matrix">
-      <img class="matrix-img" src="./eisenhower-matrix.jpg">
-      <a class="matrix-info"
-         href="https://goal-life.com/page/method/matrix-eisenhower">Want more details ?</a>
-    </div>
-    <div class="to-do-list">
-      <p id="add-task">
-        <label for="new-task_input">Add Item</label>
-        <div class="new-task-wrapper">
-          <input id="new-task_input"
-                 class="task task_input"
-                 type="text">
-          <button>Add</button>
-        </div>
-      </p>
-      <h3 class="title">Todo</h3>
-      <ul class="tasks-container" id="incomplete-tasks">
-        <li class="task-item">
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" 
-                 class="task task_input">
-          <button class="edit_button">Edit</button>
-          <button class="delete_button">
-            <img class="delete_button_img" src="./remove.svg">
-          </button>
-        </li>
-        <li class="task-item edit-mode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text"
-                 value="go-shopping" 
-                 class="task task_input">
-          <button class="edit_button">Save</button>
-          <button class="delete_button">
-            <img class="delete_button_img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3 class="title">Completed</h3>
-      <ul class="tasks-container" id="completed-tasks">
-        <li class="task-item">
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" 
-                 class="task task_input">
-          <button class="edit_button">Edit</button>
-          <button class="delete_button">
-            <img class="delete_button_img" src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-    </div>
+    <main>
+      <div class="matrix">
+        <img class="matrix-img" src="./eisenhower-matrix.jpg">
+        <a class="matrix-info"
+           href="https://goal-life.com/page/method/matrix-eisenhower">Want more details ?</a>
+      </div>
+      <div class="to-do-list">
+        <section class="add-section">
+          <div id="add-task">
+            <label for="new-task_input">Add Item</label>
+            <div class="new-task-wrapper">
+              <input id="new-task_input"
+                     class="task task_input"
+                     type="text">
+              <button>Add</button>
+            </div>
+          </div>
+        </section>
+        <section class="todo-section">
+          <h3 class="title">Todo</h3>
+          <ul class="tasks-container" id="incomplete-tasks">
+            <li class="task-item">
+              <input type="checkbox">
+              <label class="task">Pay Bills</label>
+              <input type="text" 
+                    class="task task_input">
+              <button class="edit_button">Edit</button>
+              <button class="delete_button">
+                <img class="delete_button_img" src="./remove.svg">
+              </button>
+            </li>
+            <li class="task-item edit-mode">
+              <input type="checkbox">
+              <label class="task">Go Shopping</label>
+              <input type="text"
+                    value="go-shopping" 
+                    class="task task_input">
+              <button class="edit_button">Save</button>
+              <button class="delete_button">
+                <img class="delete_button_img" src="./remove.svg">
+              </button>
+            </li>
+          </ul>
+        </section>
+        <section class="completed-section">
+          <h3 class="title">Completed</h3>
+          <ul class="tasks-container" id="completed-tasks">
+            <li class="task-item">
+              <input type="checkbox" checked>
+              <label class="task">See the Doctor</label>
+              <input type="text" 
+                     class="task task_input">
+              <button class="edit_button">Edit</button>
+              <button class="delete_button">
+                <img class="delete_button_img" src="./remove.svg">
+              </button>
+            </li>
+          </ul>
+        </section>
+      </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
