--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="body-container">
     <main>
       <div class="matrix">
-        <img class="matrix-img" src="./eisenhower-matrix.jpg">
+        <img class="matrix-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
         <a class="matrix-info"
            href="https://goal-life.com/page/method/matrix-eisenhower">Want more details ?</a>
       </div>
@@ -39,7 +39,7 @@
                     class="task task_input">
               <button class="edit_button">Edit</button>
               <button class="delete_button">
-                <img class="delete_button_img" src="./remove.svg">
+                <img class="delete_button_img" src="./remove.svg" alt="delete button">
               </button>
             </li>
             <li class="task-item edit-mode">
@@ -50,7 +50,7 @@
                     class="task task_input">
               <button class="edit_button">Save</button>
               <button class="delete_button">
-                <img class="delete_button_img" src="./remove.svg">
+                <img class="delete_button_img" src="./remove.svg" alt="delete button">
               </button>
             </li>
           </ul>
@@ -65,7 +65,7 @@
                      class="task task_input">
               <button class="edit_button">Edit</button>
               <button class="delete_button">
-                <img class="delete_button_img" src="./remove.svg">
+                <img class="delete_button_img" src="./remove.svg" alt="delete button">
               </button>
             </li>
           </ul>
