refactor: add BEM-notation according to rule 2.1 in HTML & CSS (advanced level)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
            href="https://goal-life.com/page/method/matrix-eisenhower">Want more details ?</a>
       </div>
       <div class="todo">
-        <section class="add-section">
+        <section class="todo__add-section">
             <label for="new-task">Add Item</label>
             <div class="add-section__content">
               <input id="new-task"
@@ -27,7 +27,7 @@
               <button>Add</button>
           </div>
         </section>
-        <section class="incomplete-section">
+        <section class="todo__incomplete-section">
           <h3 class="incomplete-section__title title">Todo</h3>
           <ul class="incomplete-section__list todo__list" id="incomplete-tasks">
             <li class="incomplete-section__item todo__item">
@@ -53,7 +53,7 @@
             </li>
           </ul>
         </section>
-        <section class="completed-section">
+        <section class="todo__completed-section">
           <h3 class="completed-section__title title">Completed</h3>
           <ul class="completed-section__list todo__list" id="completed-tasks">
             <li class="completed-section__item todo__item">
